--- a/insuffle-theme/assets/css/editor-style.css
+++ b/insuffle-theme/assets/css/editor-style.css
@@ -111,9 +111,10 @@
 .editor-styles-wrapper mark {
     background-color: #ffde59;
     color: #333;
-    padding: 0 5px;
-    transform: rotate(-2deg);
-    display: inline-block;
+    padding: 2px 8px;
+    display: inline;
+    font-weight: 600;
+    border-radius: 3px;
 }
 
 /* Checkmark lists */
